[package]
name = "td-amethyst"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.0"
amethyst_window = "*"
amethyst_input = "*"
amethyst_tiles = "*"
nalgebra = "*"
ron = "*"
serde = "*"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
