[package]
name = "td-amethyst"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.0"
amethyst_window = "0.5.0"
amethyst_input = "0.11.0"
amethyst_tiles = "0.3.0"
nalgebra = "*"
ron = "*"
winit = "*"
serde_json = "1.0"
serde = "1.0.110"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
